Contando palavras em texto com counter()

--- a/Coleções_Python_Iteraveis/Strings.ipynb
+++ b/Coleções_Python_Iteraveis/Strings.ipynb
@@ -472,21 +472,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "{'Então',\n",
-       " 'Mas',\n",
-       " 'append',\n",
-       " 'apêndice',\n",
+       "{'Mas',\n",
        " 'assim',\n",
        " 'bolão',\n",
-       " 'colocar',\n",
-       " 'começo',\n",
        " 'como',\n",
        " 'conjunto',\n",
        " 'conjuntos',\n",
@@ -496,9 +491,7 @@
        " 'ele',\n",
        " 'elementos',\n",
        " 'em',\n",
-       " 'executar',\n",
        " 'falamos',\n",
-       " 'faz',\n",
        " 'fim',\n",
        " 'final',\n",
        " 'fora',\n",
@@ -506,35 +499,26 @@
        " 'inicial',\n",
        " 'início',\n",
        " 'lá',\n",
-       " 'mas',\n",
        " 'meio',\n",
-       " 'no',\n",
-       " 'nome',\n",
        " 'não',\n",
-       " 'o',\n",
        " 'os',\n",
-       " 'padrão',\n",
        " 'por',\n",
-       " 'porque',\n",
        " 'posição',\n",
        " 'quando',\n",
        " 'que',\n",
        " 'sabemos',\n",
-       " 'se',\n",
-       " 'sentido',\n",
        " 'tem',\n",
        " 'temos',\n",
-       " 'tentarmos',\n",
        " 'um',\n",
        " 'é'}"
       ]
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 4
     }
    ],
    "source": [
-    "texto = 'Mas quando falamos de conjuntos, falamos meio que não tem início e fim, não tem posição inicial e posição final, tem os elementos lá dentro, em um bolão, é assim que temos que imaginar que um conjunto é por fora, não sabemos como é que ele é por dentro. Então não faz sentido o nome append, se tentarmos executar o nome não é append, porque append é um apêndice, é colocar no final, mas o conjunto, por padrão, não tem começo e final, ele tem os elementos lá dentro.'\n",
+    "texto = 'Mas quando falamos de conjuntos, falamos meio que não tem início e fim, não tem posição inicial e posição final, tem os elementos lá dentro, em um bolão, é assim que temos que imaginar que um conjunto é por fora, não sabemos como é que ele é por dentro.'\n",
     "\n",
     "pontuações = [',', '.', '!', '?']\n",
     "\n",
@@ -542,6 +526,283 @@
     "    texto = texto.replace(pontuação,'') # retirando as pontuações\n",
     "\n",
     "set(texto.split()) # separando o texto por espaço e colocando em um conjunto sem repetir as palavras"
+   ]
+  },
+  {
+   "source": [
+    "<h3><font color=#DAA520>Verificando a palavra e contando quantas vezes ela apareceu com defaultdict</font></h3>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "defaultdict(None,\n",
+       "            {'Mas': 1,\n",
+       "             'quando': 1,\n",
+       "             'falamos': 2,\n",
+       "             'de': 1,\n",
+       "             'conjuntos': 1,\n",
+       "             'meio': 1,\n",
+       "             'que': 5,\n",
+       "             'não': 3,\n",
+       "             'tem': 3,\n",
+       "             'início': 1,\n",
+       "             'e': 2,\n",
+       "             'fim': 1,\n",
+       "             'posição': 2,\n",
+       "             'inicial': 1,\n",
+       "             'final': 1,\n",
+       "             'os': 1,\n",
+       "             'elementos': 1,\n",
+       "             'lá': 1,\n",
+       "             'dentro': 2,\n",
+       "             'em': 1,\n",
+       "             'um': 2,\n",
+       "             'bolão': 1,\n",
+       "             'é': 4,\n",
+       "             'assim': 1,\n",
+       "             'temos': 1,\n",
+       "             'imaginar': 1,\n",
+       "             'conjunto': 1,\n",
+       "             'por': 2,\n",
+       "             'fora': 1,\n",
+       "             'sabemos': 1,\n",
+       "             'como': 1,\n",
+       "             'ele': 1})"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
+   "source": [
+    "texto = 'Mas quando falamos de conjuntos, falamos meio que não tem início e fim, não tem posição inicial e posição final, tem os elementos lá dentro, em um bolão, é assim que temos que imaginar que um conjunto é por fora, não sabemos como é que ele é por dentro.'\n",
+    "\n",
+    "pontuações = [',', '.', '!', '?']\n",
+    "\n",
+    "for pontuação in pontuações:\n",
+    "    texto = texto.replace(pontuação,'') # retirando as pontuações\n",
+    "\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "words_qty = defaultdict()\n",
+    "\n",
+    "for palavra in texto.split():\n",
+    "    cont_palavra = words_qty.get(palavra, 0)\n",
+    "    words_qty[palavra] = cont_palavra + 1\n",
+    "\n",
+    "words_qty"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "defaultdict(int,\n",
+       "            {'Mas': 1,\n",
+       "             'quando': 1,\n",
+       "             'falamos': 2,\n",
+       "             'de': 1,\n",
+       "             'conjuntos': 1,\n",
+       "             'meio': 1,\n",
+       "             'que': 5,\n",
+       "             'não': 3,\n",
+       "             'tem': 3,\n",
+       "             'início': 1,\n",
+       "             'e': 2,\n",
+       "             'fim': 1,\n",
+       "             'posição': 2,\n",
+       "             'inicial': 1,\n",
+       "             'final': 1,\n",
+       "             'os': 1,\n",
+       "             'elementos': 1,\n",
+       "             'lá': 1,\n",
+       "             'dentro': 2,\n",
+       "             'em': 1,\n",
+       "             'um': 2,\n",
+       "             'bolão': 1,\n",
+       "             'é': 4,\n",
+       "             'assim': 1,\n",
+       "             'temos': 1,\n",
+       "             'imaginar': 1,\n",
+       "             'conjunto': 1,\n",
+       "             'por': 2,\n",
+       "             'fora': 1,\n",
+       "             'sabemos': 1,\n",
+       "             'como': 1,\n",
+       "             'ele': 1})"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
+   "source": [
+    "# o mesmo porem passando uma função para o defaultdict e retirando .get(palavra, 0)\n",
+    "texto = 'Mas quando falamos de conjuntos, falamos meio que não tem início e fim, não tem posição inicial e posição final, tem os elementos lá dentro, em um bolão, é assim que temos que imaginar que um conjunto é por fora, não sabemos como é que ele é por dentro.'\n",
+    "\n",
+    "pontuações = [',', '.', '!', '?']\n",
+    "\n",
+    "for pontuação in pontuações:\n",
+    "    texto = texto.replace(pontuação,'') # retirando as pontuações\n",
+    "\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "words_qty = defaultdict(int) # usamos a função int, pois queremos contarinteiros\n",
+    "\n",
+    "for palavra in texto.split():\n",
+    "    cont_palavra = words_qty[palavra] # agora so passamos a palavra\n",
+    "    words_qty[palavra] = cont_palavra + 1\n",
+    "\n",
+    "words_qty"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "defaultdict(int,\n",
+       "            {'Mas': 1,\n",
+       "             'quando': 1,\n",
+       "             'falamos': 2,\n",
+       "             'de': 1,\n",
+       "             'conjuntos': 1,\n",
+       "             'meio': 1,\n",
+       "             'que': 5,\n",
+       "             'não': 3,\n",
+       "             'tem': 3,\n",
+       "             'início': 1,\n",
+       "             'e': 2,\n",
+       "             'fim': 1,\n",
+       "             'posição': 2,\n",
+       "             'inicial': 1,\n",
+       "             'final': 1,\n",
+       "             'os': 1,\n",
+       "             'elementos': 1,\n",
+       "             'lá': 1,\n",
+       "             'dentro': 2,\n",
+       "             'em': 1,\n",
+       "             'um': 2,\n",
+       "             'bolão': 1,\n",
+       "             'é': 4,\n",
+       "             'assim': 1,\n",
+       "             'temos': 1,\n",
+       "             'imaginar': 1,\n",
+       "             'conjunto': 1,\n",
+       "             'por': 2,\n",
+       "             'fora': 1,\n",
+       "             'sabemos': 1,\n",
+       "             'como': 1,\n",
+       "             'ele': 1})"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
+   "source": [
+    "# simplificando ainda mais com +=\n",
+    "texto = 'Mas quando falamos de conjuntos, falamos meio que não tem início e fim, não tem posição inicial e posição final, tem os elementos lá dentro, em um bolão, é assim que temos que imaginar que um conjunto é por fora, não sabemos como é que ele é por dentro.'\n",
+    "\n",
+    "pontuações = [',', '.', '!', '?']\n",
+    "\n",
+    "for pontuação in pontuações:\n",
+    "    texto = texto.replace(pontuação,'')\n",
+    "\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "words_qty = defaultdict(int)\n",
+    "\n",
+    "for palavra in texto.split():\n",
+    "    words_qty[palavra] += 1 # retiramos cont_palavra = words_qty[palavra] e eliminamos mais uma parte do código.\n",
+    "\n",
+    "words_qty"
+   ]
+  },
+  {
+   "source": [
+    "<h3><font color=#DAA520>Verificando a palavra e contando quantas vezes ela apareceu com counter() - MOLEZA!!!</font></h3>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Counter({'Mas': 1,\n",
+       "         'quando': 1,\n",
+       "         'falamos': 2,\n",
+       "         'de': 1,\n",
+       "         'conjuntos': 1,\n",
+       "         'meio': 1,\n",
+       "         'que': 5,\n",
+       "         'não': 3,\n",
+       "         'tem': 3,\n",
+       "         'início': 1,\n",
+       "         'e': 2,\n",
+       "         'fim': 1,\n",
+       "         'posição': 2,\n",
+       "         'inicial': 1,\n",
+       "         'final': 1,\n",
+       "         'os': 1,\n",
+       "         'elementos': 1,\n",
+       "         'lá': 1,\n",
+       "         'dentro': 2,\n",
+       "         'em': 1,\n",
+       "         'um': 2,\n",
+       "         'bolão': 1,\n",
+       "         'é': 4,\n",
+       "         'assim': 1,\n",
+       "         'temos': 1,\n",
+       "         'imaginar': 1,\n",
+       "         'conjunto': 1,\n",
+       "         'por': 2,\n",
+       "         'fora': 1,\n",
+       "         'sabemos': 1,\n",
+       "         'como': 1,\n",
+       "         'ele': 1})"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
+   "source": [
+    "texto = 'Mas quando falamos de conjuntos, falamos meio que não tem início e fim, não tem posição inicial e posição final, tem os elementos lá dentro, em um bolão, é assim que temos que imaginar que um conjunto é por fora, não sabemos como é que ele é por dentro.'\n",
+    "\n",
+    "pontuações = [',', '.', '!', '?']\n",
+    "\n",
+    "for pontuação in pontuações:\n",
+    "    texto = texto.replace(pontuação,'')\n",
+    "\n",
+    "from collections import Counter\n",
+    "\n",
+    "words_qty = Counter(texto.split())\n",
+    "words_qty"
    ]
   }
  ]
