--- a/Coleções_Python_Iteraveis/Strings.ipynb
+++ b/Coleções_Python_Iteraveis/Strings.ipynb
@@ -746,14 +746,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "Counter({'Mas': 1,\n",
+       "Counter({'mas': 1,\n",
        "         'quando': 1,\n",
        "         'falamos': 2,\n",
        "         'de': 1,\n",
@@ -788,7 +788,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 3
     }
    ],
    "source": [
@@ -797,7 +797,7 @@
     "pontuações = [',', '.', '!', '?']\n",
     "\n",
     "for pontuação in pontuações:\n",
-    "    texto = texto.replace(pontuação,'')\n",
+    "    texto = texto.lower().replace(pontuação,'')\n",
     "\n",
     "from collections import Counter\n",
     "\n",
