Criando um dicionário com lista de tuplas

--- a/Coleções_Python_Iteraveis/Dict.ipynb
+++ b/Coleções_Python_Iteraveis/Dict.ipynb
@@ -14,8 +14,9 @@
   },
   "orig_nbformat": 4,
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.9.5 64-bit ('venv': venv)"
+   "name": "python395jvsc74a57bd0325cb660cce599eef17833f9bb0afcb0e3dbe3e8605c570c8e00eb36d04c5df3",
+   "display_name": "Python 3.9.5 64-bit ('venv': venv)",
+   "language": "python"
   },
   "interpreter": {
    "hash": "325cb660cce599eef17833f9bb0afcb0e3dbe3e8605c570c8e00eb36d04c5df3"
@@ -567,6 +568,34 @@
     "# criando um dicionário com {}\n",
     "dicionário2 = {'nome': 'Ronaldo', 'idade': 35}\n",
     "print(f'{dicionário2} - usando chaves')"
+   ]
+  },
+  {
+   "source": [
+    "<h3><font color=#DAA520>Criando um dicionário com lista de tuplas</font></h3>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'Yan': '1234-5678', 'Pedro': '9999-9999', 'Ana': '8765-4321', 'Marina': '8877-7788'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "contatos_lista = [('Yan', '1234-5678'), ('Pedro', '9999-9999'),\n",
+    "                    ('Ana', '8765-4321'), ('Marina', '8877-7788')]\n",
+    "\n",
+    "contatos = dict(contatos_lista)\n",
+    "print(contatos)"
    ]
   },
   {
