incluido python_version com platform

--- a/Diversas.ipynb
+++ b/Diversas.ipynb
@@ -14,8 +14,9 @@
   },
   "orig_nbformat": 4,
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.9.5  ('venv': venv)"
+   "name": "python395jvsc74a57bd0325cb660cce599eef17833f9bb0afcb0e3dbe3e8605c570c8e00eb36d04c5df3",
+   "display_name": "Python 3.9.5 64-bit ('venv': venv)",
+   "language": "python"
   },
   "interpreter": {
    "hash": "325cb660cce599eef17833f9bb0afcb0e3dbe3e8605c570c8e00eb36d04c5df3"
@@ -26,7 +27,7 @@
  "cells": [
   {
    "source": [
-    "<h2><font color=#00BFFF>python_version</font></h2>"
+    "<h2><font color=#00BFFF>python_version com platform</font></h2>"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -48,6 +49,29 @@
     "# Versão da Linguagem Python\n",
     "from platform import python_version\n",
     "print('Versão da Linguagem Python Usada Neste Jupyter Notebook:', python_version())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Windows\n3.9.5\nIntel64 Family 6 Model 165 Stepping 2, GenuineIntel\n"
+     ]
+    }
+   ],
+   "source": [
+    "import platform  #módulo utilizado para monitorar a plataforma (S.O) que estamos utilizando\n",
+    "\n",
+    "x = platform\n",
+    "plataforma=x.system()\n",
+    "print(plataforma)\n",
+    "print(x.python_version())\n",
+    "print(x.processor())"
    ]
   }
  ]
