--- a/Diversas.ipynb
+++ b/Diversas.ipynb
@@ -1,36 +1,11 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.5"
-  },
-  "orig_nbformat": 4,
-  "kernelspec": {
-   "name": "python395jvsc74a57bd0325cb660cce599eef17833f9bb0afcb0e3dbe3e8605c570c8e00eb36d04c5df3",
-   "display_name": "Python 3.9.5 64-bit ('venv': venv)",
-   "language": "python"
-  },
-  "interpreter": {
-   "hash": "325cb660cce599eef17833f9bb0afcb0e3dbe3e8605c570c8e00eb36d04c5df3"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
-   "source": [
-    "<h2><font color=#00BFFF>python_version com platform</font></h2>"
-   ],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "# Python_version com platform"
+   ]
   },
   {
    "cell_type": "code",
@@ -38,8 +13,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Versão da Linguagem Python Usada Neste Jupyter Notebook: 3.9.5\n"
      ]
@@ -57,10 +32,12 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Windows\n3.9.5\nIntel64 Family 6 Model 165 Stepping 2, GenuineIntel\n"
+      "Windows\n",
+      "3.9.5\n",
+      "Intel64 Family 6 Model 165 Stepping 2, GenuineIntel\n"
      ]
     }
    ],
@@ -73,6 +50,84 @@
     "print(x.python_version())\n",
     "print(x.processor())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Atalhos Jupyter Notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ctrl-Enter**: executa a célula;\r\n",
+    "\r\n",
+    "**Shift-Enter**: executa a célula e cria uma nova célula abaixo no modo de comando;\r\n",
+    "\r\n",
+    "**Alt-Enter**: executa a célula e cria uma nova célula abaixo no modo de edição;\r\n",
+    "\r\n",
+    "**Y**: muda a célula para o tipo código;\r\n",
+    "\r\n",
+    "**M**: muda a célula para o tipo markdown;\r\n",
+    "\r\n",
+    "**A**: insere célula acima;\r\n",
+    "\r\n",
+    "**B**: insere célula abaixo;\r\n",
+    "\r\n",
+    "**X**: recorta a célula;\r\n",
+    "\r\n",
+    "**C**: copia a célula;\r\n",
+    "\r\n",
+    "**V**: cola a célula do clipboard abaixo;\r\n",
+    "\r\n",
+    "**shift-V**: cola a célula do clipboard acima;\r\n",
+    "\r\n",
+    "**D, D**: deleta uma célula;\r\n",
+    "\r\n",
+    "**Z**: desfaz o apagar célula;\r\n",
+    "\r\n",
+    "**L**: ativa a enumeração das linhas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Temas do Jupyter Notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "No CMD: conda install jupyterthemes ou pip install jupyterthemes\r\n",
+    "\r\n",
+    "dark\r\n",
+    "\r\n",
+    "jt -t onedork -T -f roboto -fs 12 -cursc o -cursw 3 -tfs 11 -nfs 12 -cellw 88%\r\n",
+    "\r\n",
+    "ligth\r\n",
+    "\r\n",
+    "jt -t grade3 -T -f roboto -fs 12 -cursc r -cursw 2 -tfs 11 -nfs 12 -cellw 88%"
+   ]
   }
- ]
+ ],
+ "metadata": {
+  "interpreter": {
+   "hash": "325cb660cce599eef17833f9bb0afcb0e3dbe3e8605c570c8e00eb36d04c5df3"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.5 64-bit ('venv': venv)",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": ""
+  },
+  "orig_nbformat": 4
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
