add método __dict__

--- a/Metodos_especiais.ipynb
+++ b/Metodos_especiais.ipynb
@@ -1,45 +1,21 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.5"
-  },
-  "orig_nbformat": 4,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.9.5 64-bit ('venv': venv)"
-  },
-  "interpreter": {
-   "hash": "325cb660cce599eef17833f9bb0afcb0e3dbe3e8605c570c8e00eb36d04c5df3"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
-   "source": [
-    "<h1><font color=#32CD32>Métodos especiais __ __</font></h1>"
-   ],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "# **Métodos especiais dunder underscore \\_\\_**"
+   ]
   },
   {
-   "source": [
-    "<h3><font color=#00BFFF>__class__</font></h3>\n",
-    "O método interno __class__ permite que possamos fazer uma referência a classe atual, permitindo o acesso a informações da mesma.\n",
-    "\n",
-    "Utilizando o ____class____ podemos acessar informações como nome da classe, atributo da classe ou algum método da classe."
-   ],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "# **\\_\\_class__**\r\n",
+    "O método interno \\_\\_class__ permite que possamos fazer uma referência a classe atual, permitindo o acesso a informações da mesma.\r\n",
+    "\r\n",
+    "Utilizando o \\_\\_class__ podemos acessar informações como nome da classe, atributo da classe ou algum método da classe."
+   ]
   },
   {
    "cell_type": "code",
@@ -47,10 +23,13 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Conta\nMichael\nchamando um método\nTrue\n"
+      "Conta\n",
+      "Michael\n",
+      "chamando um método\n",
+      "True\n"
      ]
     }
    ],
@@ -80,11 +59,11 @@
    ]
   },
   {
-   "source": [
-    "<h3><font color=#DAA520>Porque usarmos __class__</font></h3>"
-   ],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "## Porque usarmos \\_\\_class__"
+   ]
   },
   {
    "cell_type": "code",
@@ -92,10 +71,11 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "True\nFalse\n"
+      "True\n",
+      "False\n"
      ]
     }
    ],
@@ -123,10 +103,12 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "11\n12\n11\n"
+      "11\n",
+      "12\n",
+      "11\n"
      ]
     }
    ],
@@ -148,13 +130,48 @@
    ]
   },
   {
-   "source": [
-    "<h3><font color=#00BFFF>__eq__</font></h3>\n",
-    "\n",
-    "habilita a comparação entre dois objetos a == a"
-   ],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "# **\\_\\_dict__**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "{'nome': 'João', 'cpf': '123.456.789-00', 'profissão': 'Data Enginear'}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Cliente():\r\n",
+    "    def __init__(self, nome: str, cpf: str, profissão: str) -> None:\r\n",
+    "        self.nome = nome\r\n",
+    "        self.cpf = cpf\r\n",
+    "        self.profissão = profissão\r\n",
+    "\r\n",
+    "cliente = Cliente('João', '123.456.789-00', 'Data Enginear')\r\n",
+    "\r\n",
+    "# imprimindo com método dict\r\n",
+    "print(f'\\n{cliente.__dict__}\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **\\_\\_eq__**\r\n",
+    "\r\n",
+    "habilita a comparação entre dois objetos a == a"
+   ]
   },
   {
    "cell_type": "code",
@@ -162,14 +179,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "False"
       ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "execution_count": 3
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -190,10 +207,11 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "True\nFalse\n"
+      "True\n",
+      "False\n"
      ]
     }
    ],
@@ -213,13 +231,13 @@
    ]
   },
   {
-   "source": [
-    "<h3><font color=#00BFFF>__getitem__</font></h3>\n",
-    "\n",
-    "Deve ser aplicado a um objeto iteravel. Basicamente seu funcionamento é: objeto[[1]]"
-   ],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "# **\\_\\_getitem__**\r\n",
+    "\r\n",
+    "Deve ser aplicado a um objeto iteravel. Basicamente seu funcionamento é: objeto\\[1]"
+   ]
   },
   {
    "cell_type": "code",
@@ -227,16 +245,17 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Serie 300\nSerie 300\n"
+      "Serie 300\n",
+      "Serie 300\n"
      ]
     },
     {
-     "output_type": "error",
      "ename": "TypeError",
      "evalue": "'Lista_programas' object is not subscriptable",
+     "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
@@ -271,8 +290,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Serie 300\n"
      ]
@@ -297,11 +316,11 @@
    ]
   },
   {
-   "source": [
-    "<h3><font color=#00BFFF>__len__</font></h3>"
-   ],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "# **\\_\\_len__**"
+   ]
   },
   {
    "cell_type": "code",
@@ -309,16 +328,17 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "3\n3\n"
+      "3\n",
+      "3\n"
      ]
     },
     {
-     "output_type": "error",
      "ename": "TypeError",
      "evalue": "object of type 'Lista_programas' has no len()",
+     "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
@@ -353,8 +373,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "3\n"
      ]
@@ -378,12 +398,12 @@
    ]
   },
   {
-   "source": [
-    "<h3><font color=#00BFFF>__lt__</font></h3>\n",
-    "habilita o objeto a ser ordenavel, ou seja, usar sorted diretamente pela instancia."
-   ],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "# **\\_\\_lt__**\r\n",
+    "habilita o objeto a ser ordenavel, ou seja, usar sorted diretamente pela instancia."
+   ]
   },
   {
    "cell_type": "code",
@@ -391,10 +411,22 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "True\n\nLista ordenada crescente\nuno tem 5 litros.\ngol tem 10 litros.\ncorolla tem 25 litros.\nopala tem 100 litros.\n\nLista ordenada decrescente\nopala tem 100 litros.\ncorolla tem 25 litros.\ngol tem 10 litros.\nuno tem 5 litros.\n"
+      "True\n",
+      "\n",
+      "Lista ordenada crescente\n",
+      "uno tem 5 litros.\n",
+      "gol tem 10 litros.\n",
+      "corolla tem 25 litros.\n",
+      "opala tem 100 litros.\n",
+      "\n",
+      "Lista ordenada decrescente\n",
+      "opala tem 100 litros.\n",
+      "corolla tem 25 litros.\n",
+      "gol tem 10 litros.\n",
+      "uno tem 5 litros.\n"
      ]
     }
    ],
@@ -430,12 +462,12 @@
    ]
   },
   {
-   "source": [
-    "<h3><font color=#00BFFF>__module__</font></h3>\n",
-    "guarda o nome do modulo ao qual a classe pertence."
-   ],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "# **\\_\\_module__**\r\n",
+    "guarda o nome do modulo ao qual a classe pertence."
+   ]
   },
   {
    "cell_type": "code",
@@ -443,10 +475,11 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "__main__\nmath\n"
+      "__main__\n",
+      "math\n"
      ]
     }
    ],
@@ -459,16 +492,16 @@
    ]
   },
   {
-   "source": [
-    "<h3><font color=#00BFFF>__name__ == __main__</font></h3>\n",
-    "No Python, arquivos .py são chamados de módulos. Cada módulo pode ser executado diretamente, como um programa em si, ou importado por outro módulo.\n",
-    "\n",
-    "Precisamos, de alguma maneira, identificar essa diferença. Para isso, temos uma variável nativa que pode nos auxiliar nisso - a __name__, que nos indica o nome do contexto em que o módulo está rodando.\n",
-    "\n",
-    "Resumindo, a variável __name__ representa o nome do módulo. Entretanto, quando o módulo é executado por si só como um programa, __name__ é definido para ’__main__’, diferente de quando o módulo é importado, no qual o valor fica de fato igual ao nome do módulo."
-   ],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "# **\\_\\_name__ == \\_\\_main__**\r\n",
+    "No Python, arquivos .py são chamados de módulos. Cada módulo pode ser executado diretamente, como um programa em si, ou importado por outro módulo.\r\n",
+    "\r\n",
+    "Precisamos, de alguma maneira, identificar essa diferença. Para isso, temos uma variável nativa que pode nos auxiliar nisso - a \\_\\_name__, que nos indica o nome do contexto em que o módulo está rodando.\r\n",
+    "\r\n",
+    "Resumindo, a variável \\_\\_name__ representa o nome do módulo. Entretanto, quando o módulo é executado por si só como um programa, \\_\\_name__ é definido para ’\\_\\_main__’, diferente de quando o módulo é importado, no qual o valor fica de fato igual ao nome do módulo."
+   ]
   },
   {
    "cell_type": "code",
@@ -476,10 +509,11 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "__main__\n__main__\n"
+      "__main__\n",
+      "__main__\n"
      ]
     }
    ],
@@ -492,13 +526,13 @@
    ]
   },
   {
-   "source": [
-    "<h3><font color=#00BFFF>__repr__</font></h3>\n",
-    "\n",
-    "repr () imprime a representação “oficial” de um objeto (significa que usando a representação de string “oficial” podemos reconstruir o objeto). Basicamente repr mostra a linguagem  real da maquina e str mostra a linguagem para o usuário."
-   ],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "# **\\_\\_repr__**\r\n",
+    "\r\n",
+    "repr () imprime a representação “oficial” de um objeto (significa que usando a representação de string “oficial” podemos reconstruir o objeto). Basicamente repr mostra a linguagem  real da maquina e str mostra a linguagem para o usuário."
+   ]
   },
   {
    "cell_type": "code",
@@ -506,10 +540,12 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "2021-06-17 16:23:45.295182\ndatetime.datetime(2021, 6, 17, 16, 23, 45, 295182)\n[datetime.datetime(2021, 6, 17, 16, 23, 45, 295182), 'oi']\n"
+      "2021-06-17 16:23:45.295182\n",
+      "datetime.datetime(2021, 6, 17, 16, 23, 45, 295182)\n",
+      "[datetime.datetime(2021, 6, 17, 16, 23, 45, 295182), 'oi']\n"
      ]
     }
    ],
@@ -532,10 +568,12 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "10 + i20\nRational 10 - 20\n[Rational 10 - 20, 'oi']\n"
+      "10 + i20\n",
+      "Rational 10 - 20\n",
+      "[Rational 10 - 20, 'oi']\n"
      ]
     }
    ],
@@ -562,13 +600,13 @@
    ]
   },
   {
-   "source": [
-    "<h3><font color=#00BFFF>__setitem__</font></h3>\n",
-    "\n",
-    "Deve ser aplicado a um objeto iteravel. Basicamente seu funcionamento é: objeto[[1]] = 'dados'"
-   ],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "# **\\_\\_setitem__**\r\n",
+    "\r\n",
+    "Deve ser aplicado a um objeto iteravel. Basicamente seu funcionamento é: objeto\\[1] = 'dados'"
+   ]
   },
   {
    "cell_type": "code",
@@ -576,16 +614,22 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Lista antes:\n['Lupin', 'Serie 300', 'Prison Break']\nLista apos substituição:\n['Lupin', 'Bruchas', 'Prison Break']\n\n['Lupin', 'Bruchas', 'Prison Break']\n\n"
+      "Lista antes:\n",
+      "['Lupin', 'Serie 300', 'Prison Break']\n",
+      "Lista apos substituição:\n",
+      "['Lupin', 'Bruchas', 'Prison Break']\n",
+      "\n",
+      "['Lupin', 'Bruchas', 'Prison Break']\n",
+      "\n"
      ]
     },
     {
-     "output_type": "error",
      "ename": "TypeError",
      "evalue": "'Lista_programas' object does not support item assignment",
+     "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
@@ -624,10 +668,13 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Lista antes:\n['Lupin', 'Serie 300', 'Prison Break']\n\n['Lupin', 'Bruchas', 'Prison Break']\n"
+      "Lista antes:\n",
+      "['Lupin', 'Serie 300', 'Prison Break']\n",
+      "\n",
+      "['Lupin', 'Bruchas', 'Prison Break']\n"
      ]
     }
    ],
@@ -652,20 +699,20 @@
    ]
   },
   {
-   "source": [
-    "<h3><font color=#00BFFF>__str__</font></h3>\n",
-    "\n",
-    "O método __str__()  cria um modo de exibição padrão com print() é usado para retornar uma representação de string de um objeto."
-   ],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "# **\\_\\_str__**\r\n",
+    "\r\n",
+    "O método \\_\\_str__()  cria um modo de exibição padrão com print() é usado para retornar uma representação de string de um objeto."
+   ]
   },
   {
-   "source": [
-    "<h3><font color=#DAA520>sem __srt__ </font></h3>"
-   ],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "## sem \\_\\_srt__"
+   ]
   },
   {
    "cell_type": "code",
@@ -673,10 +720,12 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Livro criado\n\n<__main__.Livro object at 0x0000012A7A985F40>\n"
+      "Livro criado\n",
+      "\n",
+      "<__main__.Livro object at 0x0000012A7A985F40>\n"
      ]
     }
    ],
@@ -696,11 +745,11 @@
    ]
   },
   {
-   "source": [
-    "<h3><font color=#DAA520>com __srt__ </font></h3>"
-   ],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "## com \\_\\_srt__"
+   ]
   },
   {
    "cell_type": "code",
@@ -708,10 +757,12 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Livro criado\n\nTítulo: Os Lusíadas , autor: Luis de Camões, páginas: 8816\n"
+      "Livro criado\n",
+      "\n",
+      "Título: Os Lusíadas , autor: Luis de Camões, páginas: 8816\n"
      ]
     }
    ],
@@ -730,5 +781,29 @@
     "print(livro1)"
    ]
   }
- ]
+ ],
+ "metadata": {
+  "interpreter": {
+   "hash": "325cb660cce599eef17833f9bb0afcb0e3dbe3e8605c570c8e00eb36d04c5df3"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.5 64-bit ('venv': venv)",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.5"
+  },
+  "orig_nbformat": 4
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
